--- a/src/gallery-binding/build.properties
+++ b/src/gallery-binding/build.properties
@@ -7,7 +7,7 @@
 builddir=../../../builder/componentbuild
  
 # The name of the component. E.g. event, attribute, widget 
-component=gallery-pauls-binding
+component=gallery-binding
  
 # The list of files which should be concatenated to create the component
 # NOTE: For a css component. (e.g. cssfonts, cssgrids etc.) use component.cssfiles instead. 
@@ -16,7 +16,7 @@ component.jsfiles=property-utils.js,node-utils.js,binding-item.js,binding.js
 # The list of modules this component. requires. Used to set up the Y.add module call for YUI 3.
 component.requires=node, event, widget
 # The list of modules this component. supersedes. Used to set up the Y.add module call for YUI 3.
-#component.supersedes=pauls-binding-item
+#component.supersedes=binding-item
 # The list of modules that are optional for this module. Used to set up the Y.add module call for YUI 3.
 component.optional=
 # If your module has a skin file, set this flag to "true"
