--- a/src/gallery-binding/build.xml
+++ b/src/gallery-binding/build.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- YUI 3 Gallery Component Build File -->
-<project name="pauls-binding" default="local">
-    <description>Pauls Databinding</description>
+<project name="binding" default="local">
+    <description>Databinding project - binding Model to any view objects without glue code.</description>
     <property file="build.properties" />
     <import file="${builddir}/3.x/bootstrap.xml" description="Default Build Properties and Targets" />
 </project>
