--- a/src/gallery-binding/build.properties
+++ b/src/gallery-binding/build.properties
@@ -14,7 +14,7 @@ component=gallery-binding
 # component.jsfiles=my.custom.module.js, my.custom.moduleHelperClass.js, my.custom.moduleSubComponentClass.js
 component.jsfiles=property-utils.js,node-utils.js,binding-item.js,binding.js
 # The list of modules this component. requires. Used to set up the Y.add module call for YUI 3.
-component.requires=node, event, widget
+component.requires=node, event, widget, json
 # The list of modules this component. supersedes. Used to set up the Y.add module call for YUI 3.
 #component.supersedes=binding-item
 # The list of modules that are optional for this module. Used to set up the Y.add module call for YUI 3.
